# dots

./: .dockerignore  .gitignore  .gitmessage  CHANGELOG.md  CLAUDE.md  FINDINGS.md  LICENSE  README.md  ROADMAP.md  dots  go.mod  go.sum  install.sh  justfile  pyproject.toml  release-please-config.json
.claude/: settings.json
.claude/hooks/: validate-commit.sh
.github/workflows/: ci.yml  release.yml
adr/: 001-single-python-file.md  002-toml-not-yaml.md  003-discovery-files-dir.md  004-files-d-platform-scoping.md  005-managed-subsystems-opt-in.md  006-github-releases-first.md  007-marker-delimited-insertion.md  008-age-for-secrets.md  009-preset-eject-pattern.md  010-profile-auto-activation.md  011-package-split.md  012-minimum-python-version.md  013-arch-map-per-tool-override.md  014-go-rewrite.md  015-drop-templating.md  016-age-library-not-binary.md  017-archives-library-for-extraction.md  018-self-upgrade.md  019-version-tracking.md  020-live-progress-ui.md
cmd/dots/: commands.go  commands_test.go  e2e_cli_test.go  e2e_files_test.go  e2e_managed_test.go  e2e_shell_test.go  e2e_test.go  main.go  output.go  output_test.go
docs/: architecture.md  configuration.md  contributing.md  go-migration-plan.md  migration.md  platforms.md  troubleshooting.md
internal/config/: config.go  config_test.go  inline_test.go  load_test.go  parse.go  validate.go  validate_internal_test.go
internal/deploy/: applylive_test.go  deploy.go  deploy_test.go
internal/discovery/: discovery.go  discovery_test.go
internal/errs/: errs.go
internal/fileutil/: fileutil.go  fileutil_test.go
internal/ghrelease/: ghrelease.go  ghrelease_test.go
internal/git/: git.go  git_test.go
internal/lockfile/: lockfile.go  lockfile_test.go
internal/parallel/: parallel.go  parallel_test.go
internal/platform/: platform.go  platform_test.go
internal/presets/: presets.go  presets_test.go
internal/repos/: clonelive_test.go  repos.go  repos_test.go
internal/secrets/: helpers.go  secrets.go  secrets_test.go
internal/selfupdate/: selfupdate.go  selfupdate_test.go
internal/shell/: shell.go  shell_test.go
internal/ssh/: ssh.go  ssh_test.go
internal/tools/: tools.go  (+3 more)
tests/: conftest.py
(+67 files in other folders)
