[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dots"
version = "0.1.0"
description = "Dotfile management, tool installation, and shell environment generation"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
toml = ["tomli; python_version < '3.11'"]
templates = ["jinja2"]
dev = ["pytest", "ruff"]

[project.scripts]
dots = "dots.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []
